<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
            android:layout_width="match_parent"
            xmlns:android="http://schemas.android.com/apk/res/android"
    android:fillViewport="true">


<LinearLayout
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/TITLE"
        android:textAlignment="center"
        android:text="@string/dummytitle"
        android:textColor="@color/colorPrimary"
        android:textSize="40sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"/>



   <android.support.v7.widget.CardView
       android:id="@+id/card_view"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       card_view:cardCornerRadius="2dp"
       card_view:cardElevation="3dp"
       card_view:cardUseCompatPadding="true"
       android:layout_gravity="center_horizontal"
       android:layout_marginLeft="10dp"
       android:layout_marginRight="10dp">
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="500dp"
        android:id="@+id/IMAGEVIEW"
        android:layout_marginTop="10dp"
        android:adjustViewBounds="true"/>

           <LinearLayout
               android:orientation="horizontal"
               android:layout_width="match_parent"
               android:layout_height="match_parent">

               <ImageView
                   android:layout_width="20dp"
                   android:layout_height="30dp"
                   android:src="@drawable/overview"
                   android:paddingBottom="10dp"
                   android:id="@+id/imageView2"/>

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/mOverView"
                   android:id="@+id/textView7"
                   android:textSize="15sp"
                   android:textColor="#9C27B0"
                   android:layout_marginLeft="2dp"/>

           </LinearLayout>

           <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dummydata"
        android:id="@+id/OVERVIEW"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"/>
       </LinearLayout>
    </android.support.v7.widget.CardView>



    <android.support.v7.widget.CardView
        android:id="@+id/card_view_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="2dp"
        card_view:cardElevation="3dp"
        card_view:cardUseCompatPadding="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="30dp"
            android:id="@+id/imageView"
            android:src="@drawable/votestar"
            android:paddingBottom="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mVote_Average"
            android:textColor="@color/colorPrimary"
            android:id="@+id/textView3"
            android:layout_marginLeft="2dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dummydata"
            android:id="@+id/VOTE"
            android:layout_marginLeft="20dp"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="30dp"
            android:id="@+id/imageView1"
            android:src="@drawable/release"
            android:paddingBottom="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mRelease_Date"
            android:textColor="@color/colorPrimary"
            android:id="@+id/textView5"
            android:layout_marginLeft="2dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="DATE"
            android:id="@+id/DATE"
            android:layout_marginLeft="20dp"/>

    </LinearLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>

</ScrollView>